--- a/client/templates/application/layout.html
+++ b/client/templates/application/layout.html
@@ -2,7 +2,7 @@
 
     <div class="container">
 
-        <header class="navbar navbar-inverse" role="navigation">
+        <header class="navbar navbar-inverse fibredark" role="navigation">
             <div class="navbar-header">
                 <a class="navbar-brand" href="/">ClickClique</a>
             </div>
