restarted work on project. Iron router now working, 404 working.

--- a/client/templates/application/layout.html
+++ b/client/templates/application/layout.html
@@ -1,16 +1,12 @@
-<body>
-
-    <div class="container">
-
-        <header class="navbar navbar-inverse fibredark" role="navigation">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="/">ClickClique</a>
-            </div>
-        </header>
-
-        <div id="main">
-            {{> yield}}
-        </div>
+<template name="layout">
+  <div class="container">
+    <header class="navbar navbar-default" role="navigation">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="/">ClickClique</a>
+      </div>
+    </header>
+    <div id="main">
+      {{> yield}}
     </div>
-    
-</body>
+  </div>
+</template>
