--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -8,7 +8,7 @@
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15); }
 
 body {
-  background: #eee;
+  background: #55c3e8;
   color: #666666; }
 
 #main {
