--- a/client/templates/application/layout.html
+++ b/client/templates/application/layout.html
@@ -2,7 +2,7 @@
   <div class="container">
     <header class="navbar navbar-default" role="navigation">
       <div class="navbar-header">
-        <a class="navbar-brand" href="/">ClickClique</a>
+        <a class="navbar-brand" href="/">{{pageTitle}}</a>
       </div>
     </header>
     <div id="main">
