--- a/client/templates/application/layout.html
+++ b/client/templates/application/layout.html
@@ -1,12 +1,8 @@
 <template name="layout">
   <div class="container">
-    <header class="navbar navbar-default" role="navigation">
-      <div class="navbar-header">
-        <a class="navbar-brand" href="/">{{pageTitle}}</a>
-      </div>
-    </header>
+    {{>header}}
     <div id="main">
-      {{> yield}}
+      {{>yield}}
     </div>
   </div>
 </template>
